# pyCorrClim

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml
corrclim/: climatic_corrector.py  operator.py  smoother.py  timeseries_dt.py  timeseries_model.py  timeseries_std_model.py
corrclim/timeseries_model/: gam.py  grad_delta.py  timeseries_model.py
